kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kds-assurance
  labels:
    name: kds-assurance
    app: kds-assurance
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    app: monitoring
